# fund_checker

./: Cargo.toml  LICENSE  README.md
src/: config.rs  filter.rs  main.rs
src/api/: commodity.rs  common.rs  jisilu.rs  lof.rs  mod.rs  qdii.rs
src/models/: fund.rs  mod.rs
