[package]
name = "FUND_Checker"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rust_decimal = { version = "1.36", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1.40", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
